<resources>
    <string name="app_name">Notes</string>
    <string name="label_all">All Notes</string>
    <string name="label_bookmarks">Bookmarks</string>
    <string name="no_notes">No notes</string>
    <string name="no_bookmarks">No bookmarks</string>
    <string name="snackbar_error_text">Note is empty. Fill out all the fields</string>
    <string name="snackbar_create_new_successful">Note added successfully</string>
    <string name="load_note_error">Unable to load note</string>
    <string name="snackbar_update_successful_text">Note updated successfully</string>
    <string name="snackbar_delete_successful_text">Note deleted</string>
    <string name="snackbar_delete_all_text">All notes deleted</string>
    <string name="dialog_message">Are you sure?</string>
    <string name="dialog_button_okay">Yes</string>
    <string name="dialog_button_cancel">No</string>
    <string name="add_note">Add Note</string>
    <string name="edit_note">Edit Note</string>

    <!--settings-->
    <string name="language">Language</string>
    <string name="language_category_key">language_category</string>
    <string name="select_language">Select language</string>
    <string name="language_list_key">language</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="switch_theme_key">theme</string>
    <string name="theme">Theme</string>
    <string name="theme_category_key">theme_category</string>

    <string-array name="language_entries">
        <item>English</item>
        <item>Kiswahili</item>
    </string-array>

    <string-array name="language_values">
        <item>english</item>
        <item>kiswahili</item>
    </string-array>
</resources>